--- a/views/start.ejs
+++ b/views/start.ejs
@@ -9,7 +9,7 @@
 </head>
 <body class ="body">
     <div class="content">
-        <h1>This is the start of your adventure. </h1>
+        <h1>Welcome <%= user %> This is the start of your adventure. </h1>
         <h3>During youre adventure you will be given different options to pick from to create youre own quest!</h3>
 
         <button><a href="/fantasy">Start in a World with Dragons and Knights</a></button>
